<resources>
    <string name="app_name">Virtual Pantry</string>

    <!--Login screen strings-->
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="accountCreateQuery">Don\'t have an account?</string>
    <string name="Create_Account">Create Account</string>

    <!--Home screen strings-->
    <string name="notifications">Notifications</string>
    <string name="pantry_title">Family Kitchen</string>
    <string name="open_pantry">Open Pantry</string>
    <string name="create_pantry">Create Pantry</string>
    <string name="pantry_name">Pantry name:</string>
    <string name="delete_pantry">Delete Pantry</string>
    <string name="delete_pantry_prompt">Are you sure you want to delete this pantry?</string>

    <!--Pantry screen strings-->
    <string name="closebutton">Close Pantry</string>
    <string name="dairycategory">Dairy</string>
    <string name="grainscategory">Grains</string>
    <string name="meatcategory">Meat</string>
    <string name="fruitscategory">Fruits</string>
    <string name="vegiescategory">Veggies</string>
    <string name="drinkscategory">Drinks</string>
    <string name="spicescategory">Spices</string>
    <string name="oilscategory">Oils</string>
    <string name="allitems">All\nItems</string>
    <string name="bg_pantryscreen">Pantry Screen</string>

    <!--Item screen strings-->
    <string name="select_button">Select</string>
    <string name="category_name_test">Fruits</string>
    <string name="alphabetically">A-Z</string>
    <string name="status">STATUS</string>
    <string name="expiration">EXP</string>
    <string name="plus_button">Add Item</string>
    <string name="edit_item_details">Edit</string>

    <!--Edit Item Dialog Strings-->
    <string name="Edit_Items">Edit Items</string>

    <!--Add Item Dialog Strings-->
    <string name="addItemTitle">Add Item</string>
    <string name="addItemNameInput">Item Name:</string>
    <string name="addItemNameHint">Apple</string>
    <string name="addItemExpirationQuery">Perishable?</string>
    <string name="addItemExpirationDate">Expiration Date:</string>
    <string name="addItemExpirationHint">mm/dd/yyyy</string>
    <string name="addItemDone">Create</string>

    <!--Edit Item Status Dialog Strings-->
    <string name="setItemEmptyHint">E</string>
    <string name="setItemLowHint">L</string>
    <string name="setItemFullHint">F</string>
    <string name="deleteItemHint">Delete\nItem</string>

    <!--Create Account screen strings-->
    <string name="Lets_Get_Started">Let\'s Get Started!\nEnter Your Information Below.</string>
    <string name="Enter_Username">Enter Username</string>
    <string name="Email">Enter E-mail Address</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Reenter_Password">Re-Enter Password</string>
    <string name="Already_Have_an_Account">Already Have an Account?</string>
    <string name="LogIn">Log In</string>

    <!--Forgot Password screen strings-->
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="forgot_password_text">Enter email to reset password.</string>
    <string name="Submit">Submit</string>

    <!--Multiple use strings-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="send_password_link">Send Password Link</string>
    <string name="enter_e_mail_address">Enter E-mail Address</string>
    <string name="trouble_logging_in">Trouble logging in?</string>
    <string name="enter_your_e_mail_and_we_ll_send_you_a_link_nto_get_back_into_your_account">Enter your e-mail and we’ll send you a link \nto get back into your account.</string>
    <string name="pantrycategorylist">pantrycategorylist</string>

    <!--Category use strings-->
    <string name="dairy">Dairy</string>
    <string name="ViewAllItems">View All Items</string>
    <string name="Beverages">Beverages</string>
    <string name="Frozen">Frozen</string>
    <string name="Seafood">Seafood</string>
    <string name="Fruits">Fruits</string>
    <string name="Snacks">Snacks</string>
    <string name="Hygiene">Hygiene</string>
    <string name="Condiments">Condiments</string>
    <string name="Oils">Oils</string>
    <string name="Vegetables">Vegetables</string>
    <string name="Meats">Meats</string>
    <string name="Grains">Grains</string>


</resources>
