<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/pantryscreenbg" />

    <Button
        android:id="@+id/closepantry"
        android:layout_width="315dp"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@layout/closepantrybutton"
        android:fontFamily="@font/futura"
        android:text="@string/closebutton"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/spices"
        android:layout_width="102dp"
        android:layout_height="81dp"
        android:layout_alignTop="@+id/oils"
        android:layout_alignParentStart="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="-95dp"
        android:background="@layout/categorybutton"
        android:fontFamily="@font/futura"
        android:text="@string/spicescategory"
        android:textColor="#000000"
        android:textSize="17sp" />

    <Button
        android:id="@+id/oils"
        android:layout_width="102dp"
        android:layout_height="81dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="117dp"
        android:background="@layout/categorybutton"
        android:fontFamily="@font/futura"
        android:text="@string/oilscategory"
        android:textColor="#000000"
        android:textSize="17sp" />


    <Button
        android:id="@+id/nonfoods"
        android:layout_width="102dp"
        android:layout_height="81dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/spices"
        android:layout_marginEnd="32dp"
        android:background="@layout/categorybutton"
        android:fontFamily="@font/futura"
        android:text="@string/allitems"
        android:textColor="#000000"
        android:textSize="17sp" />

    <Button
        android:id="@+id/fruits"
        android:layout_width="102dp"
        android:layout_height="81dp"
        android:layout_alignStart="@+id/spices"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="301dp"
        android:background="@layout/categorybutton"
        android:fontFamily="@font/futura"
        android:text="@string/fruitscategory"
        android:textColor="#000000"
        android:textSize="17sp" />

    <Button
        android:id="@+id/vegies"
        android:layout_width="102dp"
        android:layout_height="81dp"
        android:layout_alignTop="@+id/fruits"
        android:layout_centerHorizontal="true"
        android:background="@layout/categorybutton"
        android:fontFamily="@font/futura"
        android:text="@string/vegiescategory"
        android:textColor="#000000"
        android:textSize="17sp" />

    <Button
        android:id="@+id/drinks"
        android:layout_width="102dp"
        android:layout_height="81dp"
        android:layout_alignStart="@+id/nonfoods"
        android:layout_alignTop="@+id/fruits"
        android:background="@layout/categorybutton"
        android:fontFamily="@font/futura"
        android:text="@string/drinkscategory"
        android:textColor="#000000"
        android:textSize="17sp" />

    <Button
        android:id="@+id/dairy"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="35dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/pantrydairyicon"
        android:textSize="17sp" />

    <Button
        android:id="@+id/grains"
        android:layout_width="59dp"
        android:layout_height="59dp"
        android:layout_alignTop="@+id/dairy"
        android:layout_centerHorizontal="true"
        android:background="@drawable/pantrywheaticon"
        android:fontFamily="@font/futura"
        android:textColor="#000000"
        android:textSize="17sp" />

    <Button
        android:id="@+id/meat"
        android:layout_width="102dp"
        android:layout_height="81dp"
        android:layout_alignStart="@+id/nonfoods"
        android:layout_alignTop="@+id/dairy"
        android:background="@layout/categorybutton"
        android:fontFamily="@font/futura"
        android:text="@string/meatcategory"
        android:textColor="#000000"
        android:textSize="17sp" />


</RelativeLayout>