<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/secondary_blue"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:id="@+id/itemName_expirableSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:id="@+id/AddItemName_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/futura"
                android:text="@string/addItemNameInput"
                android:textColor="@color/baby_blue"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/AddItemName"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/baby_blue"
                android:fontFamily="@font/futura"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Display1"
                android:textColor="@color/baby_blue"
                android:textColorHint="@color/colorPrimary"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ItemExpirationQuery_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/futura"
                android:text="@string/addItemExpirationQuery"
                android:textColor="@color/baby_blue"
                android:textSize="15sp" />

            <Switch
                android:id="@+id/itemExpirationQuerySwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:gravity="start" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ItemExpirationDate_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/futura"
                android:text="@string/addItemExpirationDate"
                android:textColor="@color/baby_blue"
                android:textSize="15sp" />

            <DatePicker
                android:id="@+id/AddItemExpirationPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarTextColor="@color/baby_blue"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:yearListSelectorColor="@color/baby_blue">

            </DatePicker>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>